tests/unit-fail/j068c.ref
Error: ECL4
Description: An object which has been modified is accessed through an expression based on a restrict-qualified pointer to a const-qualified type.
Type: Undefined behavior.
See also: C11 sec. 6.7.3.1:4
  at f(j068c.c:9)
  at main(j068c.c:14)
  at <file-scope>(<unknown>)
